language_tests/source_files/invalid/copyable_non_copyable_field.tr
// Test: Cannot Derive Copy with Non-Copy Field
// A struct with a non-Copy field cannot derive Copy.

struct NoCopy {
    value: int32
}

// NoCopy is NOT Copy

// ERROR: cannot derive Copy for 'Wrapper': field 'inner' is not Copy
struct Wrapper: Copy {
    inner: NoCopy
}

func main() {
    let w = Wrapper { inner: NoCopy { value: 42 } }
    std.print("This should not compile\n")
}
